--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,7 @@
     <title>Projet Devops</title>
 </head>
 <body>
-    <h1>ma rencontre avec l'informatique</h1>
+    <h1>Ma rencontre avec l'informatique</h1>
+    
 </body>
 </html>
