--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Ma rencontre avec l'informatique</h1>
-    
+    <h1>Ce sera une belle histoire à raconter!</h1>
 </body>
 </html>
