--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ma rencontre avec l'informatique</h1>
-    <h1>Ce sera une belle histoire à raconter!!</h1>
-    <p>ça commence par du shell</p>
+    <h1>Ce sera une belle histoire  à raconter!!</h1>
+    <p>ça commence par du shell, ensuite shell avancé</p>
 </body>
 </html>
