--- a/index1.html
+++ b/index1.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Ma rencontre avec l'informatique</h1>
     <h1>Ce sera une belle histoire à raconter!!</h1>
-    <p>ça commence par du shell</p>
+    <p>ça commence par du shell.</p>
 </body>
 </html>
