--- a/index1.html
+++ b/index1.html
@@ -7,14 +7,10 @@
 </head>
 <body>
     <h1>Ma rencontre avec l'informatique</h1>
-<<<<<<< HEAD
     <h1>Ce sera une belle histoire à raconter!!</h1>
     <p>ça commence par du shell. Belle expérience</p>
     <p>Jusque là tout va bien !!!</p>
-=======
-    <h1>Ce sera une belle histoire  à raconter!!</h1>
-    <p>ça commence par du shell, ensuite shell avancé</p>
->>>>>>> add-para
+    <h2>Les bases de Linux</h2>
 </body>
 
 </html>
