feat: add !! in distant

--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
     <p>ça commence par du shell. Belle expérience</p>
     <p>Jusque là tout va bien !!!</p>
     <h2>Les bases de Linux</h2>
-    <p>L'administration Linux quoi de plus facile !</p> 
+    <p>L'administration Linux quoi de plus facile !!!</p> 
 </body>
 
 </html>
