feat: add . in distant

--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
     <h1>Ce sera une belle histoire à raconter!!</h1>
     <p>ça commence par du shell. Belle expérience</p>
     <p>Jusque là tout va bien !!!</p>
-    <h2>Les bases de Linux</h2>
+    <h2>Les bases de Linux.</h2>
     <p>L'administration Linux quoi de plus facile !!!</p> 
 </body>
 
